--- a/assets/css/style1200px.css
+++ b/assets/css/style1200px.css
@@ -14,5 +14,8 @@
         text-align: center;
         margin    : 0 auto 1vh auto;
     }
-    
+    .carteDescription{
+        margin-top: 2em;
+        margin-bottom: 2em;
+    }
 }
