--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@
 
 body {
     font-family: 'Montserrat';
+    font-weight: 400;
 }
 
 .disparition {
@@ -82,22 +83,32 @@ nav .navbar-collapse a:hover {
 /* LandingPage */
 h2 {
     text-transform: uppercase;
+    font-weight: 400;
 }
 
 h3 {
     text-transform: uppercase;
     font-size     : 1.5em;
     margin-bottom : 2em;
+    font-weight: 400;
 }
 
 h4 {
-    font-size    : 1.5em;
+    font-size    : 1.7em;
     margin-bottom: 1em;
     font-style   : italic;
+    font-weight: 300;
+}
+h5 {
+    font-size    : 1.2em;
+    margin-bottom: 1em;
+    font-style   : italic;
+    font-weight: 400;
+    color: var(--color1);
 }
 
 .smallHr {
-    border-bottom: 3px solid var(--color1);
+    border-bottom: 1.5px solid var(--color1);
     max-width    : 10em;
     margin       : 0.5em auto 0.5em auto;
 }
