--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,71 +331,45 @@ h5 {
 
 /* Footer */
 
-footer a {
+footer .select a {
     font-size      : 1rem;
     text-decoration: none;
     color          : var(--colorWhite);
     text-align     : center;
     padding        : .5rem;
+    margin: 0 1rem;
 }
 
-footer a:hover {
+footer .select a:hover {
     text-decoration : none;
     background-color: rgba(255, 255, 255, 0.39);
 }
 
 footer {
+    position: relative;
     padding         : 1rem;
     background-color: var(--color1);
 }
-
+footer a{
+    line-height: 2rem;
+}
+footer img{
+    float: left;
+    margin-right: .75rem;
+    height: 2rem;
+    -webkit-filter: invert(1);
+    filter        : invert(1);
+}
 .borderLeft {
     border-left: solid var(--colorWhite);
 }
-
-.panier {
-    -webkit-filter: invert(1);
-    filter        : invert(1);
-    padding       : 7px;
-    opacity       : 0.8;
-}
-
-.lienPanier {
-    width: 55px;
-}
-
-.navbar-light .navbar-toggler {
-    color         : rgba(0, 0, 0, 0) !important;
-    border-color  : rgba(0, 0, 0, 0) !important;
-    -webkit-filter: invert(1);
-    filter        : invert(1);
-}
-
-#searching {
-    padding-top   : 0.5rem;
-    padding-bottom: 0.5rem;
-
-}
-
-#searching input {
-    width        : 250px;
-    height       : 2.3rem;
-    box-sizing   : border-box;
-    border-radius: 13px;
-    border       : 0;
-    background   :  var(--color1);
-    font-size    : 17px;
-    transition   : all 0.5s;
-}
-
-#searching input:hover {
-    background: rgba(221, 215, 215, 0.5);
-}
-#searching input::placeholder{
-    text-align: center;
-    color: var(--colorWhite);
-    padding-left: .5rem;
-}
-#searching input:focus {
-    outline: none;
+@media (max-width: 992px) {
+    .borderLeft {
+        border-left: none;
+        margin-top: .5rem;
+    }
+    .imgFooter{
+        justify-content: center;
+        margin-top: 1rem;
+    }
 }
