--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -5,7 +5,7 @@ body {
 body:before {
   position          : absolute;
   content           : "";
-  z-index           : 1;
+  z-index           : 1000;
   top               : 0;
   left              : 0;
   right             : 0;
@@ -24,8 +24,7 @@ body.show-sidebar:before {
 }
 
 
-aside,
-main{
+aside{
   height    : 100vh;
   min-height: 580px;
 }
