--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,7 +1,9 @@
 .section {
     position  : relative;
 }
-
+.first{
+    padding-top: 3.3em;
+}
 .section .section-center {
     position         : relative;
     top              : 50%;
@@ -13,21 +15,21 @@
 }
 
 #booking {
-    min-height: calc((100vh) - (4em));
+    min-height: calc(100vh - (4em + 3.3em));
     background-image   : url(../img/reserve/luxury.jpg);
     background-size    : cover;
     background-position: center;
 }
 
 #recrute {
-    min-height: calc((100vh) - (4em));
+    min-height: calc(100vh - (4em + 3.3em));
     background-image   : url(../img/recrutement/Hotel-de-Crillon-les-artisans-du-palace.jpg);
     background-size    : cover;
     background-position: center;
 }
 
 #contact {
-    min-height: calc((100vh) - (4em));
+    min-height: calc(100vh - (4em + 3.3em));
     background-image   : url(../img/contact/contact.jpg);
     background-size    : cover;
     background-position: center;
