--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,8 +210,8 @@ h5 {
 
 #imgTest1,
 #imgRoom1,
-#imgRoom2,
-#imgRoom3,
+#imgRoom2 img,
+#imgRoom3 img,
 #imgExperience1,
 #imgExperience2,
 #imgCare1,
