--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,7 +188,7 @@ h5 {
     z-index         : 2;
     color           : var(--color2);
     border          : 1.5px solid var(--color2);
-    background-color: var(--colorWhiteOpacity5);
+    background-color: var(--colorWhite);
     transition      : 1s;
 }
 
@@ -278,6 +278,9 @@ h5 {
     transform : translateX(-50%) translateY(-50%);
     top       : 80%;
     left      : 50%;
+}
+#reserveButton:hover {
+    background-color: var(--color2);
 }
 
 .imgButton {
