--- a/assets/css/care.css
+++ b/assets/css/care.css
@@ -1,34 +1,60 @@
-.careCard #imgCare1, .careCard #imgCare2, .careCard #imgCare3, .careCard #imgCare4, .careCard #imgCare5{
-    border-left: none;
+.careCard #imgCare1,
+.careCard #imgCare2,
+.careCard #imgCare3,
+.careCard #imgCare4,
+.careCard #imgCare5 {
+    border-left : none;
     border-right: none;
-    border-top: none;
+    border-top  : none;
 }
-#imgCare1, #imgCare2, #imgCare3, #imgCare4, #imgCare5{
-    margin-bottom: 1em;
+
+#imgCare1,
+#imgCare2,
+#imgCare3,
+#imgCare4,
+#imgCare5 {
+    margin-bottom   : 1em;
     max-height      : 25em;
     background-color: teal;
 }
-#care1, #care2, #care3{
+
+#care1,
+#care2,
+#care3 {
     margin-bottom: 4vh;
 }
 
-.careCard{
+.careCard {
     padding: 0;
-    border: 2px solid var(--color1);
-    height: auto;
+    border : 2px solid var(--color1);
+    height : auto;
 }
+
 .careCard p {
-    padding-left: 1em;
+    padding-left : 1em;
     padding-right: 1em;
 }
-.care1{
+
+.care1 {
     height: auto;
 }
 
-#spaHours{
+#spaHours {
     margin-left: auto;
 }
-#spaPrices{
+
+#spaPrices {
     margin-right: auto;
-    border-left: 1px solid var(--color1);
+    border-left : 1px solid var(--color1);
+}
+
+#imgCare1,
+#imgCare2,
+#imgCare3,
+#imgCare4,
+#imgCare5 {
+    overflow: hidden;
+    padding : 0px;
+    border  : 2px solid var(--color1);
+    position: relative;
 }
