--- a/assets/css/care.css
+++ b/assets/css/care.css
@@ -1,13 +1,3 @@
-.careCard #imgCare1,
-.careCard #imgCare2,
-.careCard #imgCare3,
-.careCard #imgCare4,
-.careCard #imgCare5 {
-    border-left : none;
-    border-right: none;
-    border-top  : none;
-}
-
 #imgCare1,
 #imgCare2,
 #imgCare3,
@@ -15,13 +5,20 @@
 #imgCare5 {
     margin-bottom   : 1em;
     max-height      : 25em;
-    background-color: teal;
+    overflow: hidden;
+    padding : 0px;
+    border  : 2px solid var(--color1);
+    position: relative;
+    border-left : none;
+    border-right: none;
+    border-top  : none;
 }
 
 #care1,
 #care2,
 #care3 {
     margin-bottom: 4vh;
+    max-width: 75vw;
 }
 
 .careCard {
@@ -34,11 +31,6 @@
     padding-left : 1em;
     padding-right: 1em;
 }
-
-.care1 {
-    height: auto;
-}
-
 #spaHours {
     margin-left: auto;
 }
@@ -48,13 +40,3 @@
     border-left : 1px solid var(--color1);
 }
 
-#imgCare1,
-#imgCare2,
-#imgCare3,
-#imgCare4,
-#imgCare5 {
-    overflow: hidden;
-    padding : 0px;
-    border  : 2px solid var(--color1);
-    position: relative;
-}
